cluster/home/home-assistant/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: home
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
subsets:
  - addresses:
      - ip: ${IP_HASSIO}
    ports:
      - name: http
        port: 8123
        protocol: TCP
