cluster/home/home-assistant/service-entry.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: home-assistant
  namespace: home
spec:
  hosts:
  - home-assistant.milton.mcf.io
  location: MESH_EXTERNAL
  ports:
  - number: 3128
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 192.168.30.5
