cluster/home/home-assistant/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home
spec:
  hosts:
  - home-assistant.milton.mcf.io
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        port:
          number: 3128
        host: hassio.local
